--- a/assets/preload/data/green-eggs/green-eggs-easy.json
+++ b/assets/preload/data/green-eggs/green-eggs-easy.json
@@ -62,8 +62,8 @@
 						0
 					],
 					[
-						2625,
-						1,
+						2750,
+						3,
 						0
 					]
 				],
@@ -174,17 +174,12 @@
 						0
 					],
 					[
-						6750,
-						2,
+						6625,
+						1,
 						0
 					],
 					[
 						6875,
-						2,
-						0
-					],
-					[
-						6625,
 						1,
 						0
 					]
@@ -212,16 +207,6 @@
 					[
 						8500,
 						3,
-						0
-					],
-					[
-						8625,
-						1,
-						0
-					],
-					[
-						8750,
-						2,
 						0
 					],
 					[
@@ -263,6 +248,11 @@
 						9500,
 						4,
 						625
+					],
+					[
+						8750,
+						1,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -332,7 +322,7 @@
 					],
 					[
 						11625,
-						1,
+						0,
 						0
 					]
 				],
@@ -352,11 +342,6 @@
 						0
 					],
 					[
-						12250,
-						2,
-						0
-					],
-					[
 						12500,
 						0,
 						0
@@ -364,11 +349,6 @@
 					[
 						13000,
 						3,
-						0
-					],
-					[
-						13125,
-						1,
 						0
 					],
 					[
@@ -384,11 +364,6 @@
 					[
 						13625,
 						3,
-						0
-					],
-					[
-						13750,
-						1,
 						0
 					],
 					[
@@ -409,6 +384,11 @@
 					[
 						12625,
 						2,
+						0
+					],
+					[
+						12250,
+						3,
 						0
 					]
 				],
@@ -458,11 +438,6 @@
 						0
 					],
 					[
-						15000,
-						1,
-						0
-					],
-					[
 						15250,
 						3,
 						0
@@ -485,11 +460,6 @@
 					[
 						15750,
 						3,
-						0
-					],
-					[
-						15875,
-						1,
 						0
 					]
 				],
@@ -665,11 +635,6 @@
 						0
 					],
 					[
-						20625,
-						1,
-						0
-					],
-					[
 						20750,
 						3,
 						0
@@ -677,11 +642,6 @@
 					[
 						20875,
 						0,
-						0
-					],
-					[
-						21000,
-						1,
 						0
 					],
 					[
@@ -713,6 +673,11 @@
 						20000,
 						5,
 						625
+					],
+					[
+						21000,
+						1,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -724,11 +689,6 @@
 					[
 						22000,
 						0,
-						0
-					],
-					[
-						22250,
-						2,
 						0
 					],
 					[
@@ -747,11 +707,6 @@
 						0
 					],
 					[
-						22875,
-						2,
-						0
-					],
-					[
 						23000,
 						0,
 						0
@@ -759,11 +714,6 @@
 					[
 						23625,
 						3,
-						0
-					],
-					[
-						23750,
-						1,
 						0
 					],
 					[
@@ -795,6 +745,11 @@
 						23250,
 						2,
 						0
+					],
+					[
+						22125,
+						0,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -813,11 +768,6 @@
 						0
 					],
 					[
-						24250,
-						0,
-						0
-					],
-					[
 						24375,
 						1,
 						0
@@ -830,11 +780,6 @@
 					[
 						24750,
 						3,
-						0
-					],
-					[
-						25125,
-						0,
 						0
 					],
 					[
@@ -880,18 +825,8 @@
 						0
 					],
 					[
-						26125,
-						3,
-						0
-					],
-					[
 						26375,
 						2,
-						0
-					],
-					[
-						26500,
-						3,
 						0
 					],
 					[
@@ -905,17 +840,7 @@
 						0
 					],
 					[
-						27125,
-						2,
-						0
-					],
-					[
 						27250,
-						0,
-						0
-					],
-					[
-						27625,
 						0,
 						0
 					],
@@ -928,6 +853,21 @@
 						27875,
 						3,
 						0
+					],
+					[
+						26625,
+						2,
+						0
+					],
+					[
+						27125,
+						0,
+						0
+					],
+					[
+						27750,
+						3,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -936,37 +876,12 @@
 			{
 				"sectionNotes": [
 					[
-						28000,
-						0,
-						0
-					],
-					[
 						28250,
 						2,
 						0
 					],
 					[
-						28500,
-						3,
-						0
-					],
-					[
 						28625,
-						2,
-						0
-					],
-					[
-						28875,
-						3,
-						0
-					],
-					[
-						29000,
-						0,
-						0
-					],
-					[
-						29125,
 						2,
 						0
 					],
@@ -987,6 +902,26 @@
 					],
 					[
 						29875,
+						0,
+						0
+					],
+					[
+						28000,
+						3,
+						0
+					],
+					[
+						28500,
+						2,
+						0
+					],
+					[
+						28875,
+						2,
+						0
+					],
+					[
+						29125,
 						0,
 						0
 					]
@@ -1012,21 +947,6 @@
 						0
 					],
 					[
-						30750,
-						2,
-						0
-					],
-					[
-						30500,
-						1,
-						0
-					],
-					[
-						31000,
-						3,
-						0
-					],
-					[
 						31250,
 						0,
 						0
@@ -1039,6 +959,16 @@
 					[
 						31750,
 						1,
+						0
+					],
+					[
+						30625,
+						0,
+						0
+					],
+					[
+						31000,
+						2,
 						0
 					]
 				],
@@ -1053,48 +983,13 @@
 						0
 					],
 					[
-						32125,
-						3,
-						0
-					],
-					[
 						32375,
 						2,
 						0
 					],
 					[
-						32500,
-						3,
-						0
-					],
-					[
-						32750,
-						2,
-						0
-					],
-					[
-						32875,
-						0,
-						0
-					],
-					[
-						33125,
-						2,
-						0
-					],
-					[
-						33500,
-						3,
-						0
-					],
-					[
 						33750,
 						1,
-						0
-					],
-					[
-						33875,
-						3,
 						0
 					],
 					[
@@ -1115,6 +1010,16 @@
 					[
 						33375,
 						1,
+						0
+					],
+					[
+						32750,
+						0,
+						0
+					],
+					[
+						33000,
+						0,
 						0
 					]
 				],
@@ -1165,11 +1070,6 @@
 						0
 					],
 					[
-						35625,
-						1,
-						0
-					],
-					[
 						35750,
 						3,
 						0
@@ -1207,11 +1107,6 @@
 			{
 				"sectionNotes": [
 					[
-						36000,
-						2,
-						0
-					],
-					[
 						36250,
 						3,
 						0
@@ -1219,16 +1114,6 @@
 					[
 						36375,
 						0,
-						0
-					],
-					[
-						36750,
-						2,
-						0
-					],
-					[
-						36500,
-						1,
 						0
 					],
 					[
@@ -1275,6 +1160,16 @@
 						37250,
 						5,
 						625
+					],
+					[
+						36625,
+						0,
+						0
+					],
+					[
+						36875,
+						1,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -1370,7 +1265,12 @@
 						0
 					],
 					[
-						41000,
+						41250,
+						3,
+						0
+					],
+					[
+						41875,
 						3,
 						0
 					],
@@ -1380,28 +1280,8 @@
 						0
 					],
 					[
-						41250,
-						3,
-						0
-					],
-					[
-						41375,
-						0,
-						0
-					],
-					[
-						41625,
-						3,
-						0
-					],
-					[
 						41750,
 						0,
-						0
-					],
-					[
-						41875,
-						3,
 						0
 					]
 				],
@@ -1421,37 +1301,7 @@
 						0
 					],
 					[
-						42375,
-						0,
-						0
-					],
-					[
-						42500,
-						3,
-						0
-					],
-					[
-						42625,
-						0,
-						0
-					],
-					[
-						42875,
-						3,
-						0
-					],
-					[
-						43000,
-						0,
-						0
-					],
-					[
 						43125,
-						3,
-						0
-					],
-					[
-						43375,
 						3,
 						0
 					],
@@ -1468,6 +1318,26 @@
 					[
 						43875,
 						3,
+						0
+					],
+					[
+						42375,
+						0,
+						0
+					],
+					[
+						42625,
+						3,
+						0
+					],
+					[
+						42875,
+						0,
+						0
+					],
+					[
+						43250,
+						0,
 						0
 					]
 				],
@@ -1512,11 +1382,6 @@
 						0
 					],
 					[
-						45000,
-						2,
-						0
-					],
-					[
 						45500,
 						3,
 						0
@@ -1548,11 +1413,6 @@
 						0
 					],
 					[
-						46500,
-						2,
-						0
-					],
-					[
 						46625,
 						0,
 						0
@@ -1564,11 +1424,6 @@
 					],
 					[
 						47000,
-						3,
-						0
-					],
-					[
-						47125,
 						0,
 						0
 					],
@@ -1578,22 +1433,12 @@
 						0
 					],
 					[
-						47375,
-						0,
-						0
-					],
-					[
 						47625,
-						3,
+						0,
 						0
 					],
 					[
 						47750,
-						0,
-						0
-					],
-					[
-						47875,
 						3,
 						0
 					]
@@ -1611,26 +1456,6 @@
 					],
 					[
 						48250,
-						3,
-						0
-					],
-					[
-						48375,
-						0,
-						0
-					],
-					[
-						48500,
-						3,
-						0
-					],
-					[
-						48625,
-						0,
-						0
-					],
-					[
-						48875,
 						3,
 						0
 					],
@@ -1663,6 +1488,16 @@
 						49875,
 						3,
 						0
+					],
+					[
+						48500,
+						0,
+						0
+					],
+					[
+						48750,
+						3,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -1671,16 +1506,6 @@
 			{
 				"altAnim": true,
 				"sectionNotes": [
-					[
-						50000,
-						2,
-						0
-					],
-					[
-						50125,
-						3,
-						0
-					],
 					[
 						50250,
 						0,
@@ -1702,11 +1527,6 @@
 						0
 					],
 					[
-						51250,
-						2,
-						0
-					],
-					[
 						51625,
 						3,
 						0
@@ -1718,6 +1538,11 @@
 					],
 					[
 						50625,
+						3,
+						0
+					],
+					[
+						50000,
 						3,
 						0
 					]
@@ -1774,11 +1599,6 @@
 						0
 					],
 					[
-						53375,
-						0,
-						0
-					],
-					[
 						53625,
 						3,
 						0
@@ -1801,11 +1621,6 @@
 				"altAnim": true,
 				"sectionNotes": [
 					[
-						54000,
-						0,
-						0
-					],
-					[
 						54250,
 						3,
 						0
@@ -1818,11 +1633,6 @@
 					[
 						54500,
 						3,
-						0
-					],
-					[
-						54625,
-						0,
 						0
 					],
 					[
@@ -1877,37 +1687,12 @@
 						0
 					],
 					[
-						56375,
-						1,
-						0
-					],
-					[
-						56500,
-						0,
-						0
-					],
-					[
-						56625,
-						2,
-						0
-					],
-					[
-						56875,
-						0,
-						0
-					],
-					[
 						57000,
 						2,
 						0
 					],
 					[
 						57250,
-						2,
-						0
-					],
-					[
-						57500,
 						2,
 						0
 					],
@@ -1922,8 +1707,23 @@
 						0
 					],
 					[
-						57875,
-						1,
+						56250,
+						0,
+						0
+					],
+					[
+						56500,
+						3,
+						0
+					],
+					[
+						56750,
+						0,
+						0
+					],
+					[
+						57500,
+						0,
 						0
 					]
 				],
@@ -1948,52 +1748,32 @@
 						0
 					],
 					[
-						58500,
-						2,
-						0
-					],
-					[
 						58625,
 						3,
 						0
 					],
 					[
-						58875,
-						1,
-						0
-					],
-					[
-						59000,
-						3,
-						0
-					],
-					[
-						59250,
-						3,
-						0
-					],
-					[
-						59812.5,
+						59625,
 						1,
 						0
 					],
 					[
 						59875,
-						3,
+						1,
 						0
 					],
 					[
-						59125,
+						59000,
+						1,
+						0
+					],
+					[
+						59250,
 						1,
 						0
 					],
 					[
 						59375,
-						0,
-						0
-					],
-					[
-						59625,
 						3,
 						0
 					]
@@ -2006,41 +1786,6 @@
 					[
 						60000,
 						0,
-						0
-					],
-					[
-						60250,
-						3,
-						0
-					],
-					[
-						60437.5,
-						1,
-						0
-					],
-					[
-						60500,
-						3,
-						0
-					],
-					[
-						60750,
-						2,
-						0
-					],
-					[
-						60875,
-						3,
-						0
-					],
-					[
-						61062.5,
-						1,
-						0
-					],
-					[
-						61125,
-						3,
 						0
 					],
 					[
@@ -2061,6 +1806,31 @@
 					[
 						61875,
 						3,
+						0
+					],
+					[
+						60250,
+						1,
+						0
+					],
+					[
+						60500,
+						1,
+						0
+					],
+					[
+						60750,
+						3,
+						0
+					],
+					[
+						61000,
+						1,
+						0
+					],
+					[
+						61250,
+						1,
 						0
 					]
 				],
@@ -2253,42 +2023,7 @@
 						0
 					],
 					[
-						68125,
-						3,
-						0
-					],
-					[
-						68375,
-						2,
-						0
-					],
-					[
-						68500,
-						3,
-						0
-					],
-					[
-						68750,
-						2,
-						0
-					],
-					[
-						68875,
-						0,
-						0
-					],
-					[
-						69125,
-						2,
-						0
-					],
-					[
 						69250,
-						0,
-						0
-					],
-					[
-						69625,
 						0,
 						0
 					],
@@ -2316,6 +2051,26 @@
 						69500,
 						6,
 						625
+					],
+					[
+						68250,
+						2,
+						0
+					],
+					[
+						68500,
+						2,
+						0
+					],
+					[
+						68750,
+						0,
+						0
+					],
+					[
+						69000,
+						0,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -2324,31 +2079,6 @@
 			},
 			{
 				"sectionNotes": [
-					[
-						70000,
-						0,
-						0
-					],
-					[
-						70250,
-						2,
-						0
-					],
-					[
-						70500,
-						3,
-						0
-					],
-					[
-						70625,
-						2,
-						0
-					],
-					[
-						70875,
-						3,
-						0
-					],
 					[
 						71000,
 						0,
@@ -2398,6 +2128,21 @@
 						71750,
 						7,
 						375
+					],
+					[
+						70125,
+						1,
+						0
+					],
+					[
+						70375,
+						1,
+						0
+					],
+					[
+						70625,
+						1,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -2420,11 +2165,6 @@
 					[
 						72375,
 						0,
-						0
-					],
-					[
-						72750,
-						2,
 						0
 					],
 					[
@@ -2473,8 +2213,8 @@
 						625
 					],
 					[
-						72500,
-						1,
+						72625,
+						2,
 						0
 					]
 				],
@@ -2609,21 +2349,6 @@
 						0
 					],
 					[
-						79500,
-						1,
-						0
-					],
-					[
-						79625,
-						0,
-						0
-					],
-					[
-						79750,
-						1,
-						0
-					],
-					[
 						78500,
 						4,
 						625,
@@ -2646,33 +2371,23 @@
 						0
 					],
 					[
-						78625,
-						2,
-						0
-					],
-					[
-						78875,
-						1,
+						78750,
+						3,
 						0
 					],
 					[
 						79000,
-						3,
-						0
-					],
-					[
-						79125,
-						0,
+						1,
 						0
 					],
 					[
 						79250,
-						2,
+						3,
 						0
 					],
 					[
-						79625,
-						3,
+						79500,
+						0,
 						0
 					]
 				],
@@ -2893,11 +2608,6 @@
 						0
 					],
 					[
-						86125,
-						1,
-						0
-					],
-					[
 						86250,
 						3,
 						0
@@ -2908,16 +2618,6 @@
 						0
 					],
 					[
-						86625,
-						1,
-						0
-					],
-					[
-						86875,
-						1,
-						0
-					],
-					[
 						87000,
 						0,
 						0
@@ -2925,11 +2625,6 @@
 					[
 						87125,
 						3,
-						0
-					],
-					[
-						87250,
-						1,
 						0
 					],
 					[
@@ -2990,6 +2685,11 @@
 					[
 						87875,
 						6,
+						0
+					],
+					[
+						86750,
+						3,
 						0
 					]
 				],
@@ -3124,23 +2824,8 @@
 						0
 					],
 					[
-						90250,
-						1,
-						0
-					],
-					[
 						90375,
 						0,
-						0
-					],
-					[
-						90437.5,
-						3,
-						0
-					],
-					[
-						90500,
-						1,
 						0
 					],
 					[
@@ -3268,6 +2953,11 @@
 						91937.5,
 						7,
 						0
+					],
+					[
+						90500,
+						3,
+						0
 					]
 				],
 				"lengthInSteps": 16,
@@ -3288,11 +2978,6 @@
 					[
 						92500,
 						2,
-						0
-					],
-					[
-						92625,
-						0,
 						0
 					],
 					[
@@ -3463,36 +3148,6 @@
 						0
 					],
 					[
-						98125,
-						3,
-						0
-					],
-					[
-						98375,
-						2,
-						0
-					],
-					[
-						98500,
-						3,
-						0
-					],
-					[
-						98750,
-						2,
-						0
-					],
-					[
-						98875,
-						0,
-						0
-					],
-					[
-						99125,
-						2,
-						0
-					],
-					[
 						99250,
 						0,
 						0
@@ -3526,6 +3181,26 @@
 						99500,
 						6,
 						625
+					],
+					[
+						98250,
+						2,
+						0
+					],
+					[
+						98500,
+						2,
+						0
+					],
+					[
+						98750,
+						0,
+						0
+					],
+					[
+						99000,
+						0,
+						0
 					]
 				],
 				"typeOfSection": 0,
@@ -3548,28 +3223,8 @@
 						0
 					],
 					[
-						100500,
-						3,
-						0
-					],
-					[
-						100625,
-						2,
-						0
-					],
-					[
-						100875,
-						3,
-						0
-					],
-					[
 						101000,
 						0,
-						0
-					],
-					[
-						101125,
-						2,
 						0
 					],
 					[
@@ -3612,6 +3267,16 @@
 						7,
 						375,
 						"Alt Animation"
+					],
+					[
+						100500,
+						2,
+						0
+					],
+					[
+						100875,
+						2,
+						0
 					]
 				],
 				"typeOfSection": 0,
@@ -3900,11 +3565,6 @@
 						0
 					],
 					[
-						109125,
-						5,
-						0
-					],
-					[
 						109250,
 						4,
 						0
@@ -3917,11 +3577,6 @@
 					[
 						109625,
 						7,
-						0
-					],
-					[
-						109750,
-						5,
 						0
 					],
 					[
@@ -4040,23 +3695,8 @@
 						0
 					],
 					[
-						111500,
-						3,
-						0
-					],
-					[
 						111625,
 						0,
-						0
-					],
-					[
-						111750,
-						3,
-						0
-					],
-					[
-						111875,
-						1,
 						0
 					],
 					[
@@ -4098,6 +3738,11 @@
 						111750,
 						5,
 						0
+					],
+					[
+						111500,
+						3,
+						0
 					]
 				],
 				"typeOfSection": 0,
@@ -4112,11 +3757,6 @@
 					[
 						112000,
 						0,
-						0
-					],
-					[
-						112375,
-						3,
 						0
 					],
 					[
@@ -4215,8 +3855,8 @@
 						0
 					],
 					[
-						112125,
-						1,
+						112250,
+						3,
 						0
 					]
 				],
@@ -4239,11 +3879,6 @@
 					[
 						114625,
 						0,
-						0
-					],
-					[
-						114750,
-						3,
 						0
 					],
 					[
@@ -4676,28 +4311,8 @@
 						0
 					],
 					[
-						122250,
-						0,
-						0
-					],
-					[
-						122500,
-						3,
-						0
-					],
-					[
-						122625,
-						2,
-						0
-					],
-					[
 						122000,
 						0,
-						0
-					],
-					[
-						122750,
-						3,
 						0
 					],
 					[
@@ -4727,6 +4342,16 @@
 					],
 					[
 						123875,
+						3,
+						0
+					],
+					[
+						122500,
+						0,
+						0
+					],
+					[
+						122625,
 						3,
 						0
 					]
@@ -4802,21 +4427,6 @@
 						0
 					],
 					[
-						124375,
-						2,
-						0
-					],
-					[
-						124750,
-						1,
-						0
-					],
-					[
-						124875,
-						2,
-						0
-					],
-					[
 						124500,
 						3,
 						0
@@ -4832,28 +4442,8 @@
 						0
 					],
 					[
-						125000,
-						0,
-						0
-					],
-					[
-						125250,
-						0,
-						0
-					],
-					[
 						125125,
 						3,
-						0
-					],
-					[
-						125500,
-						3,
-						0
-					],
-					[
-						125625,
-						0,
 						0
 					],
 					[
@@ -4862,8 +4452,18 @@
 						0
 					],
 					[
-						125875,
-						0,
+						125000,
+						2,
+						0
+					],
+					[
+						125375,
+						2,
+						0
+					],
+					[
+						125625,
+						2,
 						0
 					]
 				],
@@ -4933,28 +4533,13 @@
 						0
 					],
 					[
-						126500,
-						1,
-						0
-					],
-					[
 						126625,
-						0,
-						0
-					],
-					[
-						126875,
 						0,
 						0
 					],
 					[
 						127000,
 						3,
-						0
-					],
-					[
-						127125,
-						1,
 						0
 					],
 					[
@@ -4969,6 +4554,11 @@
 					],
 					[
 						127750,
+						2,
+						0
+					],
+					[
+						126750,
 						2,
 						0
 					]
@@ -4989,48 +4579,8 @@
 						0
 					],
 					[
-						128125,
-						5,
-						0
-					],
-					[
-						128375,
-						7,
-						0
-					],
-					[
-						128500,
-						4,
-						0
-					],
-					[
-						128625,
-						7,
-						0
-					],
-					[
 						128000,
 						0,
-						0
-					],
-					[
-						128125,
-						1,
-						0
-					],
-					[
-						128375,
-						3,
-						0
-					],
-					[
-						128500,
-						0,
-						0
-					],
-					[
-						128625,
-						3,
 						0
 					],
 					[
@@ -5042,6 +4592,26 @@
 						128750,
 						6,
 						375
+					],
+					[
+						128250,
+						4,
+						0
+					],
+					[
+						128500,
+						7,
+						0
+					],
+					[
+						128250,
+						0,
+						0
+					],
+					[
+						128500,
+						3,
+						0
 					]
 				],
 				"altAnim": false,
@@ -5159,6 +4729,16 @@
 				"bpm": 120,
 				"changeBPM": false,
 				"mustHitSection": true
+			},
+			{
+				"gfSection": false,
+				"lengthInSteps": 16,
+				"altAnim": false,
+				"typeOfSection": 0,
+				"sectionNotes": [],
+				"bpm": 120,
+				"changeBPM": false,
+				"mustHitSection": true
 			}
 		],
 		"player2": "parents-christmas",
@@ -5168,6 +4748,6 @@
 		"needsVoices": true,
 		"validScore": true,
 		"bpm": 120,
-		"speed": 2.7
+		"speed": 2.3
 	}
 }
