--- a/assets/preload/data/spookeez/spookeez-easy.json
+++ b/assets/preload/data/spookeez/spookeez-easy.json
@@ -2929,7 +2929,7 @@
 			}
 		],
 		"player3": "gf",
-		"song": "Spookeez",
+		"song": "spookeez",
 		"sections": 0,
 		"needsVoices": true,
 		"stage": "spooky",
