IT'S SPOOKY MOUTH!

--- a/assets/preload/data/south/south-easy.json
+++ b/assets/preload/data/south/south-easy.json
@@ -2234,7 +2234,7 @@
 			}
 		],
 		"player3": "gf",
-		"song": "South",
+		"song": "south",
 		"stage": "spooky",
 		"needsVoices": true,
 		"validScore": true,
