--- a/assets/preload/data/pico/pico-easy.json
+++ b/assets/preload/data/pico/pico-easy.json
@@ -2162,7 +2162,7 @@
 		],
 		"player2": "pico",
 		"player3": null,
-		"song": "Pico",
+		"song": "pico",
 		"stage": "philly",
 		"needsVoices": true,
 		"validScore": true,
