--- a/assets/preload/data/ghastly/ghastly-easy.json
+++ b/assets/preload/data/ghastly/ghastly-easy.json
@@ -3725,7 +3725,7 @@
 		],
 		"player2": "spooky",
 		"player3": "gf",
-		"song": "Ghastly",
+		"song": "ghastly",
 		"validScore": true,
 		"sections": 0,
 		"needsVoices": true,
